--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: 将棋レイク
 email: shimizu.kenji@noncore.net
 description: >- # this means to ignore newlines until "baseurl:"
   観る将のための情報収集アプリ
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/shogi-lake" # the subpath of your site, e.g. /blog
+url: "https://pkshimizu.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
 github_username: pkshimizu
 
